[package]
name = "adblock-coffee"
version = "0.1.3"
edition = "2021"
authors = ["Bread White <breadrock1@gmail.com>"]

[lib]
crate_type = ["cdylib"]

[dependencies]
anyhow = "^1.0"
adblock = "^0.8"
env_logger = "0.11.3"
jni = "^0.21"
lazy_static = "1.5.0"
log = "0.4.22"
once_cell = "1.19.0"
thiserror = "^1.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "^0.14"
